--- a/app/src/main/res/layout/activity_search_book.xml
+++ b/app/src/main/res/layout/activity_search_book.xml
@@ -34,13 +34,13 @@
             android:background="@null"
             android:imeOptions="actionSearch"
             android:inputType="text"
-            android:onEditorActionListener="@{viewModel.editorActionListener}"
             android:padding="5dp"
             android:text="@={viewModel.searchWord}"
             app:layout_constraintBottom_toBottomOf="@id/view_search_background"
             app:layout_constraintEnd_toStartOf="@id/btn_search"
             app:layout_constraintStart_toStartOf="@id/view_search_background"
             app:layout_constraintTop_toTopOf="@id/view_search_background" />
+        <!--android:onEditorActionListener="@{viewModel.editorActionListener}"-->
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_search"
@@ -65,7 +65,7 @@
             android:paddingHorizontal="5dp"
             android:paddingTop="14dp"
             android:paddingBottom="16dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
             android:layout_marginTop="100dp"
             android:text="책 제목, 제은이 등을 검색해 보세요."
             android:textSize="18sp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_toolbar" />
