--- a/app/src/main/res/layout/activity_search_book.xml
+++ b/app/src/main/res/layout/activity_search_book.xml
@@ -20,7 +20,7 @@
             android:layout_height="0dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginVertical="10dp"
-            android:background="@drawable/bg_round_all"
+            android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@id/view_toolbar"
             app:layout_constraintEnd_toEndOf="@id/view_toolbar"
             app:layout_constraintStart_toStartOf="@id/view_toolbar"
@@ -56,7 +56,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_search_result"
-            searchResult="@{viewModel.searchResult}"
+            searchResult="@{viewModel.searchResultModel}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="10dp"
@@ -94,7 +94,7 @@
 
         <variable
             name="viewModel"
-            type="com.cont96roller.library.adapter.SearchBookViewModel" />
+            type="com.cont96roller.library.viewmodel.SearchBookViewModel" />
 
     </data>
 
